--- a/action.yml
+++ b/action.yml
@@ -33,13 +33,13 @@ runs:
       shell: pwsh
       working-directory: ${{ github.action_path }}
       run: |
-        if ("${{ inputs.isPrerelease }}"" -eq "true") {
+        if ("${{ inputs.isPrerelease }}" -eq "true") {
           $isPrelease = $true
         } else {
           $isPrelease = $false
         }
 
-        if ("${{ inputs.push }}"" -eq "true") {
+        if ("${{ inputs.push }}" -eq "true") {
           $push = $true
         } else {
           $push = $false
